--- a/index.html
+++ b/index.html
@@ -37,6 +37,29 @@
       <img src="./img/fotos/introducao.jpg" alt="">
     </div>
   </main>
+  <article class="bike-list">
+    <h2 class="container font-1-xxl cor-11">escolha a sua<span class="cor-p1">.</span></h2>
+    <ul>
+      <li><a href=".bicicletas/magic.html">
+          <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
+          <h3 class="font-1-xl cor-11">Magic Might</h3>
+          <span class=" font-2-m cor-8">R$2499</span>
+        </a>
+      </li>
+      <li><a href=".bicicletas/nimbus.html">
+          <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta">
+          <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
+          <span class=" font-2-m cor-8">R$4999</span>
+        </a>
+      </li>
+      <li><a href=".bicicletas/nebula.html">
+          <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta Preta">
+          <h3 class="font-1-xl cor-11"">Nebula Cosmic</h3>
+          <span class=" font-2-m cor-8">R$3999</span>
+        </a>
+      </li>
+    </ul>
+  </article>
 </body>
 
 </html>
