--- a/index.html
+++ b/index.html
@@ -60,6 +60,32 @@
       </li>
     </ul>
   </article>
+  <article class="tecnologia">
+    <div class="tecnologia-geral container">
+      <div class="tecnologia-sobre">
+        <span class="font-2-l-b cor-5">TECNOLOGIA AVANÇADA</span>
+        <h2 class="font-1-xxl cor-0">você escolhe suas cores e componentes<span class="cor-p1">.</span></h2>
+        <p class="font-2-l cor-5">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <a class="link" href="">Escolha um modelo</a>
+        <div class="tecnologia-beneficios">
+          <div class="eletrica">
+            <img src="./img/icones/eletrica.svg" alt="icone de bicicleta">
+            <h3 class="font-1-m cor-0">Motor Elétrico</h3>
+            <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+          </div>
+          <div class="rastreio">
+            <img src="./img/icones/rastreador.svg" alt="icone de rastreio">
+            <h3 class="font-1-m cor-0">Rastreador</h3>
+            <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+          </div>
+        </div>
+      </div>
+      <div class="tec-img">
+        <img src="./img/fotos/tecnologia.jpg" alt="Tecnologia">
+      </div>
+    </div>
+
+  </article>
 </body>
 
 </html>
