--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/imports.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -84,8 +84,31 @@
         <img src="./img/fotos/tecnologia.jpg" alt="Tecnologia">
       </div>
     </div>
-
   </article>
+  <section class="parceiros">
+    <h2 class="container font-1-xxl cor-11">nossos parceiros<span class="cor-p1">.</span></h2>
+    <ul>
+      <li><img src="./img/parceiros/caravan.svg" alt=""></li>
+      <li><img src="./img/parceiros/ranek.svg" alt=""></li>
+      <li><img src="./img/parceiros/handel.svg" alt=""></li>
+      <li><img src="./img/parceiros/dogs.svg" alt=""></li>
+      <li><img src="./img/parceiros/lescone.svg" alt=""></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt=""></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt=""></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt=""></li>
+    </ul>
+  </section>
+  <section class="depoimento">
+    <div>
+      <img src="./img/fotos/depoimento.jpg" width="1560" height="1360" alt="Pessoa pedalando em uma bike">
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote class="font-1-xl cor-p5">
+        <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+      </blockquote>
+      <span class="font-1-m-b cor-p4">Ana Júlia</span>
+    </div>
+  </section>
 </body>
 
 </html>
