add secure section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,42 @@
       <span class="font-1-m-b cor-p4">Ana Júlia</span>
     </div>
   </section>
+  <section class="orcamento">
+    <h2 class="container font-1-xxl cor-0">seguros<span class="cor-p1">.</span></h2>
+    <div class="orcamento-tipos">
+      <div class="orcamento-prata">
+        <h3 class="font-1-xl cor-6">PRATA</h3>
+        <span class="font-1-xl cor-0">R$199
+          <span class="font-1-xs cor-6">Mensal</span>
+        </span>
+        <ul class="font-2-m cor-0">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="button secundario font-1-m" href="./orcamento.html">Inscreva-se</a>
+      </div>
+      <div class="orcamento-ouro">
+        <h3 class="font-1-xl cor-p1">OURO</h3>
+        <span class="font-1-xl cor-0">R$299
+          <span class="font-1-xs cor-6">Mensal</span>
+        </span>
+        <ul class="font-2-m cor-0">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a class="button font-1-m" href="./orcamento.html">Inscreva-se</a>
+      </div>
+      <div>
+
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
