--- a/seguros.html
+++ b/seguros.html
@@ -91,12 +91,12 @@
         </li>
         <li>
           <img src="./img/icones/seguro.svg" alt="">
-          <h3 class="font-1-1 cor-0">Segurança</h3>
+          <h3 class="font-1-l cor-0">Segurança</h3>
           <p class="font-2-s cor-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em casos de roubo.</p>
         </li>
         <li>
           <img src="./img/icones/velocidade.svg" alt="">
-          <h3 class="font-1-1 cor-0">Rapidez</h3>
+          <h3 class="font-1-l cor-0">Rapidez</h3>
           <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
       </ul>
