--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
   <article class="bike-list">
     <h2 class="container font-1-xxl cor-11">escolha a sua<span class="cor-p1">.</span></h2>
     <ul>
-      <li><a href=".bicicletas/magic.html">
+      <li><a href="./bicicletas/magic.html">
           <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl cor-11">Magic Might</h3>
           <span class=" font-2-m cor-8">R$2499</span>
         </a>
       </li>
-      <li><a href=".bicicletas/nimbus.html">
+      <li><a href="./bicicletas/nimbus.html">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
           <span class=" font-2-m cor-8">R$4999</span>
         </a>
       </li>
-      <li><a href=".bicicletas/nebula.html">
+      <li><a href="./bicicletas/nebula.html">
           <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl cor-11"">Nebula Cosmic</h3>
           <span class=" font-2-m cor-8">R$3999</span>
@@ -66,7 +66,7 @@
         <span class="font-2-l-b cor-5">TECNOLOGIA AVANÇADA</span>
         <h2 class="font-1-xxl cor-0">você escolhe suas cores e componentes<span class="cor-p1">.</span></h2>
         <p class="font-2-l cor-5">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-        <a class="link" href="">Escolha um modelo</a>
+        <a class="link" href="./bicicletas.html">Escolha um modelo</a>
         <div class="tecnologia-beneficios">
           <div class="eletrica">
             <img src="./img/icones/eletrica.svg" alt="icone de bicicleta">
