--- a/bicicletas.html
+++ b/bicicletas.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bicicletas</title>
+  <title>Bicicletas | Bikcraft</title>
   <meta name="description" content="Bicicletas">
   <link rel="stylesheet" href="./css/imports.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -92,7 +92,7 @@
               Rastreador
             </li>
           </ul>
-          <a class="button seta" href="./bicicletas/magic.html">Mais Sobre</a>
+          <a class="button seta" href="">Mais Sobre</a>
         </div>
       </div>
     </div>
@@ -123,7 +123,7 @@
             Rastreador
           </li>
         </ul>
-        <a class="button seta" href="./bicicletas/nebula.html">Mais Sobre</a>
+        <a class="button seta" href="">Mais Sobre</a>
 
       </div>
     </div>
