--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikcraft - Home</title>
+  <title>Home | Bikcraft</title>
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft">
   <link rel="stylesheet" href="./css/imports.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
   <article class="bike-list">
     <h2 class="container font-1-xxl cor-11">escolha a sua<span class="cor-p1">.</span></h2>
     <ul>
-      <li><a href="./bicicletas/magic.html">
+      <li><a href="">
           <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
           <h3 class="font-1-xl cor-11">Magic Might</h3>
           <span class=" font-2-m cor-8">R$2499</span>
@@ -52,9 +52,9 @@
           <span class=" font-2-m cor-8">R$4999</span>
         </a>
       </li>
-      <li><a href="./bicicletas/nebula.html">
+      <li><a href="">
           <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta Preta">
-          <h3 class="font-1-xl cor-11"">Nebula Cosmic</h3>
+          <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
           <span class=" font-2-m cor-8">R$3999</span>
         </a>
       </li>
